# drone-platform

./: .gitignore  00-Project-Overview.md  01-Market-Research.md  02-Technical-Specs.md  03-Physics-and-Engineering.md  04-Zipline-Case-Study.md  05-African-Air-Defence-Context.md  06-Development-Roadmap-and-Test-Plan.md  07-Mission-Engine-Architecture.md  08-Payload-System-Design.md  09-UK-Regulations-and-Test-Sites.md  10-Pest-Control-Applications.md  11-Military-Applications-Research.md  12-Naval-Maritime-Applications.md  13-Sensor-Payload-Specifications.md  14-Deep-EO-Camera-Systems.md  15-Deep-Thermal-IR-Imaging.md  16-Deep-LiDAR-Scanning.md  17-Deep-Loitering-Munitions.md  18-Deep-Counter-UAS.md  19-Deep-Swarm-Deployment.md  20-Deep-Naval-ASW-Sonar.md  21-Deep-Pest-Control-Systems.md  22-Multi-Scale-Platform-Family.md  23-Mesh-Network-and-Directional-Comms.md  24-Ground-Station-Software-Architecture.md  25-AI-CAD-Tools-Research.md  26-Automated-Drone-Bases-Research.md  27-Regulatory-Strategy-International.md  28-Ground-Station-Hardware-Design.md  29-Audit-Tube-Folding-Wing-Design.md  29-Tileable-Microdrone-Design.md  29-Tube-Packaged-Folding-Wing-Design.md  30-Distributed-Radar-Swarm-Research.md  31-In-Flight-Power-Transfer.md  32-Persistent-Stratospheric-Platforms.md  33-Aerial-Command-Base-Concept.md  34-NotebookLM-Airship-Infrastructure-Research.md  34-Unified-Airship-Infrastructure-Network.md  35-Development-and-Funding-Roadmap.md  (+25 more)
mission-planning-engine/: .coverage  14-Network-AutoDiscovery-C2-Integration.md  Dockerfile  docker-compose.yml  pyproject.toml
(+107 files in other folders)
