[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-planning-engine"
version = "0.1.0"
description = "Autonomous mission planner for ArduPilot fixed-wing UAVs"
requires-python = ">=3.11"
dependencies = [
    "pymavlink>=2.4.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
tak = ["pytak>=7.0"]
ais = ["pyais>=2.5"]
dashboard = ["fastapi>=0.100", "uvicorn>=0.20"]
db = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29", "geoalchemy2>=0.14"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
mpe = "mpe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: marks tests that hit external networks (skip in CI with -m 'not live')",
]
asyncio_mode = "strict"
